--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -13,6 +13,29 @@ jobs:
         with:
           node-version: '14'
 
+      - run: npm install yarn -g
+      - run: yarn
+
+      - name: refresh repository
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEV_HOST }}
+          port: ${{ secrets.DEV_PORT }}
+          username: ${{ secrets.DEV_SSH_USER }}
+          key: ${{ secrets.DEV_PRIV_KEY }}
+          script: ${{ secrets.REFRESH_CODE_DEV }}
+
+      - name: Deploy to Dev server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.DEV_PRIV_KEY }}
+          ARGS: "-rltgoDzvO"
+          SOURCE: "./*"
+          REMOTE_HOST: ${{ secrets.DEV_HOST }}
+          REMOTE_PORT: ${{ secrets.DEV_PORT }}
+          REMOTE_USER: ${{ secrets.DEV_SSH_USER }}
+          TARGET: ${{ secrets.DEV_DIR_TARGET }}
+
       - name: update
         uses: appleboy/ssh-action@master
         with:
@@ -21,6 +44,5 @@ jobs:
           port: ${{ secrets.DEV_PORT }}
           key: ${{ secrets.DEV_PRIV_KEY }}
           script: |
-            cd /home/ramperto/tsmedia.cms/ && git pull
-            cd /home/ramperto/tsmedia.cms/ && nvm use v14.8.0 && yarn
+            sudo chown -R ramperto:www-data /home/ramperto/tsmedia.cms
             cd /home/ramperto/tsmedia.cms/ && pm2 restart devtsmedia-cms
