--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -14,7 +14,8 @@ jobs:
           node-version: '14'
 
       - run: npm install yarn -g
-      - run: yarn
+      - run: yarn install
+      - run: yarn build
 
       - name: refresh repository
         uses: appleboy/ssh-action@master
