--- a/api/our-key-values/models/our-key-values.settings.json
+++ b/api/our-key-values/models/our-key-values.settings.json
@@ -12,20 +12,20 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "OurKeyValues": {
+    "ourKeyValues": {
       "type": "component",
       "repeatable": true,
       "component": "assets.feature-list"
     },
-    "Description": {
+    "description": {
       "type": "text"
     },
-    "Brands": {
+    "brands": {
       "type": "component",
       "repeatable": true,
       "component": "assets.logo"
     },
-    "Channels": {
+    "channels": {
       "type": "component",
       "repeatable": true,
       "component": "assets.channels"
