--- a/api/contact-us/models/contact-us.settings.json
+++ b/api/contact-us/models/contact-us.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "contact_uses",
   "info": {
-    "name": "Contact Us"
+    "name": "Contact Us",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,16 +12,16 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "Title": {
+    "title": {
       "type": "string"
     },
-    "Location": {
+    "location": {
       "type": "string"
     },
-    "Email": {
+    "email": {
       "type": "string"
     },
-    "MobilePhone": {
+    "mobilePhone": {
       "type": "string"
     }
   }
