--- a/api/social-media/models/social-media.settings.json
+++ b/api/social-media/models/social-media.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "social_medias",
   "info": {
-    "name": "Social Media"
+    "name": "Social Media",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,7 +12,7 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "SocialMedia": {
+    "socialMedia": {
       "type": "component",
       "repeatable": true,
       "component": "socmeds.social-media"
