Optimize Programs Collection

--- a/api/programs/models/programs.settings.json
+++ b/api/programs/models/programs.settings.json
@@ -1,6 +1,6 @@
 {
   "kind": "collectionType",
-  "collectionName": "restaurants",
+  "collectionName": "programs",
   "info": {
     "name": "Programs",
     "description": ""
@@ -28,10 +28,7 @@
     },
     "type": {
       "type": "enumeration",
-      "enum": [
-        "Programs",
-        "Channels"
-      ]
+      "enum": ["Programs", "Channels"]
     },
     "description": {
       "type": "text"
