Update Assets Components

--- a/api/programs/models/programs.settings.json
+++ b/api/programs/models/programs.settings.json
@@ -28,7 +28,10 @@
     },
     "type": {
       "type": "enumeration",
-      "enum": ["Programs", "Channels"]
+      "enum": [
+        "Programs",
+        "Channels"
+      ]
     },
     "description": {
       "type": "text"
