Add Talents Backgrop Input in Programs Collection

--- a/api/programs/models/programs.settings.json
+++ b/api/programs/models/programs.settings.json
@@ -71,6 +71,18 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "talentsBackdrop": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
